# main.go
@@ -1,6 +1,7 @@
 package main
 
 import (
+	"fmt"
 	"log"
 	"net/http"
 
@@ -9,22 +10,32 @@ import (
 )
 
 func main() {
-
 	r := mux.NewRouter()
 
+	// Tasks
 	r.HandleFunc("/tasks", todo.GetTasks).Methods("GET")
-	r.HandleFunc("/tasks/{id}", todo.GetTask).Methods("GET")
-	r.HandleFunc("/tasks", todo.CreateTask).Methods("POST")
-	r.HandleFunc("/tasks/{id}", todo.UpdateTask).Methods("PUT")
-	r.HandleFunc("/tasks/{id}", todo.DeleteTask).Methods("DELETE")
+	r.HandleFunc("/task/{id}", todo.GetTask).Methods("GET")
+	r.HandleFunc("/task", todo.CreateTask).Methods("POST")
+	r.HandleFunc("/task/{id}", todo.UpdateTask).Methods("PUT")
+	r.HandleFunc("/task/{id}", todo.DeleteTask).Methods("DELETE")
+
+	// Lists
+	r.HandleFunc("/lists", todo.GetLists).Methods("GET")
+	r.HandleFunc("/list/{id}", todo.GetList).Methods("GET")
+	r.HandleFunc("/list", todo.CreateList).Methods("POST")
+	r.HandleFunc("/list/{id}", todo.UpdateList).Methods("PUT")
+	r.HandleFunc("/list/{id}", todo.DeleteList).Methods("DELETE")
+	r.HandleFunc("/list/{listId}/task/{taskId}", todo.MoveTask).Methods("PUT")
+	r.HandleFunc("/list/{id}/tasks", todo.ReOrderTasksInList).Methods("PUT")
+	r.HandleFunc("/list", todo.ReOrderLists).Methods("PUT")
 
 	r.PathPrefix("/swagger-ui/").Handler(http.StripPrefix("/swagger-ui/", http.FileServer(http.Dir("./swagger-ui/"))))
-	
+
+	// swagger API route
+	fmt.Println("Swagger API: http://localhost:8080/swagger-ui/")
+
+	// normal API routes
+	fmt.Println("Normal API routes: http://localhost:8080")
+
 	log.Fatal(http.ListenAndServe(":8080", r))
 }
-
-
-
-
-
-
